fixed spacing on menu for mobile devices

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -265,7 +265,7 @@ footer p {
 
 @media screen and (max-width: 479px) {
     header .cabecera  {
-        width:90%;
+        width:95%;
     }
     
     header .cabecera .menu {
