--- a/css/estilosCont.css
+++ b/css/estilosCont.css
@@ -222,7 +222,7 @@ footer p {
 
 @media screen and (max-width: 479px) {
     header .cabecera  {
-        width:90%;
+        width:95%;
     }
 
     .boxContact h3.title {
